2009-11-01  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_info.c:
	* src/bmltest_info.h:
	* tests/testmachine.sh:
	  Print creating and init time. Add to testmachine script.

2009-11-01  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* configure.ac:
	* dllwrapper/wine/elfdll.c:
	  Add configure checks for thing uses conditionally in dllwrapper.

2009-10-28  Stefan Kost  <ensonic@users.sf.net>

	* src/bmltest_process.c:
	* src/bmltest_process.h:
	* tests/testmachine.sh:
	  Add denormal detection to tests.

2009-09-06  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Back to development.
	  
=== release 0.5.0 ===

2009-09-05  Stefan Kost  <ensonic@users.sf.net>

	* NEWS:
	  Update NEWS.

2009-06-26  Krzysztof Foltman  <kfoltman@users.sf.net>

	* dllwrapper/wine/win32.c:
	  Fix gcc 4.4 compile error.

2009-06-04  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader.dll:
	  Rebuild for API changes.

	* src/bmltest_info.h:
	  Fix bm->bmh.
	  

2009-06-04  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/bml.c:
	* src/bml.h:
	* src/bmltest_info.h:
	* src/bmltest_process.h:
	  Split the api further into library and instance api.

2009-06-03  Stefan Kost  <ensonic@users.sf.net>

	* src/BuzzMachineLoader/BuzzMachineLoader.cpp:
	* src/BuzzMachineLoader/BuzzMachineLoader.h:
	* src/bml.c:
	* src/bml.h:
	* src/bmltest_info.h:
	* src/bmltest_process.h:
	  Break the API. We need open/close calls for the plugin, as well as
	  new/free calls for the instances.

2009-05-10  Stefan Kost  <ensonic@users.sf.net>

	* autogen.sh:
	  aclocal gather all the necessary macros. And libtoolize installs m4 files.
	  They must be present before running aclocal. Without this patch, autoconf
	  complains about unknown libtool macros (using 2.2.6a-4 on Debian).

2009-05-07  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Idea.

	* src/Makefile.am:
	* src/bmltest_info.c: