@@ -946,7 +946,7 @@ void PE_UnloadLibrary(WINE_MODREF *wm)
 static void extend_stack_for_dll_alloca(void)
 {
 #ifndef __FreeBSD__
-    void* mem=alloca(0x20000);
+    void* mem=alloca(0x20000); /* 128 kbyte */
     *(int*)mem=0x1234;
 #endif
 }
